--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ ul{
 	list-style-type: none;
 }
 
+h3{
+	margin:0;
+}
+
 body{
 	font-family: Arial, sans-serif;
 	font-size: 12px;
@@ -11,6 +15,10 @@ body{
 }
 .floatRight{
 	float:right;
+}
+
+.floatLeft{
+	float:left;
 }
 
 .pointer:hover{
@@ -101,7 +109,7 @@ body{
 	display:none;
 	float:right;
 	background-color:white;
-	padding:20px;
+	padding:40px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
@@ -116,7 +124,11 @@ body{
 	font: normal x-small verdana,arial,helvetica,sans-serif;
 	float: right;
 	margin-top: -10px;
-	margin-right: -5px;
+	margin-right: -15px;
 	color: #369;
+}
+
+.h3LoginWindow{
+	margin:-20px 0px 10px -5px;
 }
 /* End Login*/
